feat: Include three parks in site and change in order of componentes

--- a/config/sync/core.entity_form_display.node.parques.default.yml
+++ b/config/sync/core.entity_form_display.node.parques.default.yml
@@ -26,7 +26,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 2
+    weight: 8
     settings:
       rows: 9
       summary_rows: 3
@@ -36,19 +36,19 @@ content:
     region: content
   created:
     type: datetime_timestamp
-    weight: 11
+    weight: 12
     region: content
     settings: {  }
     third_party_settings: {  }
   field_animals_permission:
-    weight: 5
+    weight: 4
     settings:
       display_label: true
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
   field_distance_area:
-    weight: 6
+    weight: 5
     settings:
       size: 60
       placeholder: ''
@@ -71,13 +71,13 @@ content:
     region: content
   field_image_secondary_park_right:
     type: media_library_widget
-    weight: 26
+    weight: 10
     settings:
       media_types: {  }
     third_party_settings: {  }
     region: content
   field_local_google_map:
-    weight: 8
+    weight: 7
     settings:
       placeholder_url: ''
       placeholder_title: ''
@@ -85,23 +85,27 @@ content:
     type: link_default
     region: content
   field_name_city:
-    weight: 3
+    weight: 2
     settings:
+      match_operator: CONTAINS
+      match_limit: 10
       size: 60
       placeholder: ''
     third_party_settings: {  }
-    type: text_textfield
+    type: entity_reference_autocomplete
     region: content
   field_name_nation:
-    weight: 4
+    weight: 3
     settings:
+      match_operator: CONTAINS
+      match_limit: 10
       size: 60
       placeholder: ''
     third_party_settings: {  }
-    type: text_textfield
+    type: entity_reference_autocomplete
     region: content
   field_permission_feed:
-    weight: 7
+    weight: 6
     settings:
       display_label: true
     third_party_settings: {  }
@@ -109,7 +113,7 @@ content:
     region: content
   path:
     type: path
-    weight: 12
+    weight: 13
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -117,19 +121,19 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 14
+    weight: 15
     region: content
     third_party_settings: {  }
   status:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 15
+    weight: 16
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
-    weight: 13
+    weight: 14
     region: content
     settings:
       display_label: true
@@ -144,7 +148,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 10
+    weight: 11
     region: content
     settings:
       match_operator: CONTAINS
