--- a/config/sync/field.storage.taxonomy_term.field_image_nation.yml
+++ b/config/sync/field.storage.taxonomy_term.field_image_nation.yml
@@ -1,16 +1,16 @@
-uuid: 889d4691-ae61-43f2-9f7b-b36389df3a79
+uuid: b778b996-6336-411c-b9ac-6da232387c53
 langcode: pt-br
 status: true
 dependencies:
   module:
-    - node
+    - media
     - taxonomy
-id: node.field_name_city
-field_name: field_name_city
-entity_type: node
+id: taxonomy_term.field_image_nation
+field_name: field_image_nation
+entity_type: taxonomy_term
 type: entity_reference
 settings:
-  target_type: taxonomy_term
+  target_type: media
 module: core
 locked: false
 cardinality: 1
