--- a/config/sync/block.block.bootstrap_tools.yml
+++ b/config/sync/block.block.bootstrap_tools.yml
@@ -1,6 +1,6 @@
 uuid: 3a10a349-815c-46fd-8309-b41ef7088c35
 langcode: pt-br
-status: true
+status: false
 dependencies:
   config:
     - system.menu.tools
