feat: Include the five contents of the waterfall and correction of paragraph in page of park

--- a/config/sync/block.block.views_block__list_park_block_1.yml
+++ b/config/sync/block.block.views_block__list_park_block_1.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - views.view.list_park
   module:
+    - system
     - views
   theme:
     - bootstrap
@@ -21,4 +22,8 @@ settings:
   label_display: visible
   views_label: ''
   items_per_page: none
-visibility: {  }
+visibility:
+  request_path:
+    id: request_path
+    pages: /node
+    negate: false
