feat: Include view list page and two block list, for the page waterfall type

--- a/config/sync/core.entity_view_display.block_content.basic.default.yml
+++ b/config/sync/core.entity_view_display.block_content.basic.default.yml
@@ -6,7 +6,35 @@ dependencies:
     - block_content.type.basic
     - field.field.block_content.basic.body
   module:
+    - layout_builder
+    - layout_discovery
     - text
+third_party_settings:
+  layout_builder:
+    allow_custom: false
+    enabled: true
+    sections:
+      -
+        layout_id: layout_onecol
+        layout_settings:
+          label: ''
+        components:
+          29b10e83-55d6-46e0-ab75-c364c9b1b5d0:
+            uuid: 29b10e83-55d6-46e0-ab75-c364c9b1b5d0
+            region: content
+            configuration:
+              label_display: '0'
+              context_mapping:
+                entity: layout_builder.entity
+              id: 'field_block:block_content:basic:body'
+              formatter:
+                label: hidden
+                type: text_default
+                settings: {  }
+                third_party_settings: {  }
+            additional: {  }
+            weight: 0
+        third_party_settings: {  }
 _core:
   default_config_hash: orJpHUlAc_wiQLMUjIgEJXGeiqylGHMPcmNRjGtct-M
 id: block_content.basic.default
