--- a/config/sync/block_content.type.basic.yml
+++ b/config/sync/block_content.type.basic.yml
@@ -5,6 +5,6 @@ dependencies: {  }
 _core:
   default_config_hash: zglzjmYxi0G0ag9MZ02y0LSJOdpWRwJxyP_OvFojFyo
 id: basic
-label: 'Bloco básico'
+label: 'Basic Block'
 revision: 0
 description: 'Um bloco básico contém um título e um corpo.'
