--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "drupal/core-project-message": "^9.2",
         "drupal/core-recommended": "^9.2",
         "drupal/core-vendor-hardening": "^9.2",
+        "drupal/pathauto": "^1.8",
         "drush/drush": "^10.6"
     },
     "conflict": {
