--- a/config/sync/views.view.list_waterfall.yml
+++ b/config/sync/views.view.list_waterfall.yml
@@ -545,7 +545,7 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
-      path: list_waterfall
+      path: waterfall
       menu:
         type: normal
         title: Cachoeiras
