feat: Include page Sobre and Política de privacidade, include your submenu

--- a/config/sync/block.block.bootstrap_footer.yml
+++ b/config/sync/block.block.bootstrap_footer.yml
@@ -13,14 +13,14 @@ _core:
 id: bootstrap_footer
 theme: bootstrap
 region: footer
-weight: 0
+weight: -9
 provider: null
 plugin: 'system_menu_block:footer'
 settings:
   id: 'system_menu_block:footer'
-  label: 'Footer menu'
+  label: Submenu
   provider: system
-  label_display: '0'
+  label_display: visible
   level: 1
   depth: 0
   expand_all_items: false
