--- a/config/sync/block.block.bootstrap_powered.yml
+++ b/config/sync/block.block.bootstrap_powered.yml
@@ -1,6 +1,6 @@
 uuid: b5516f80-48c1-42fd-9d50-74aa0c6c3b25
 langcode: pt-br
-status: true
+status: false
 dependencies:
   module:
     - system
@@ -11,7 +11,7 @@ _core:
 id: bootstrap_powered
 theme: bootstrap
 region: footer
-weight: -10
+weight: -7
 provider: null
 plugin: system_powered_by_block
 settings:
