--- a/config/sync/views.view.list_park.yml
+++ b/config/sync/views.view.list_park.yml
@@ -1,10 +1,9 @@
 uuid: 3cd45b27-3e41-4b36-8658-26f6858272cc
 langcode: pt-br
-status: true
+status: false
 dependencies:
   config:
     - field.storage.node.body
-    - field.storage.node.field_animals_permission
     - field.storage.node.field_distance_area
     - field.storage.node.field_image_main_park
     - field.storage.node.field_local_google_map
@@ -525,71 +524,6 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
-        field_animals_permission:
-          id: field_animals_permission
-          table: node__field_animals_permission
-          field: field_animals_permission
-          relationship: none
-          group_type: group
-          admin_label: ''
-          label: ''
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: boolean
-          settings:
-            format: default
-            format_custom_true: ''
-            format_custom_false: ''
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-          plugin_id: field
       filters:
         status:
           value: '1'
@@ -652,7 +586,6 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.node.body'
-        - 'config:field.storage.node.field_animals_permission'
         - 'config:field.storage.node.field_distance_area'
         - 'config:field.storage.node.field_local_google_map'
         - 'config:field.storage.node.field_name_city'
@@ -1472,7 +1405,7 @@ display:
     position: 3
     display_options:
       display_extenders: {  }
-      path: list_park_rest
+      path: park/list_park_rest
       style:
         type: serializer
         options:
@@ -1937,71 +1870,6 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
-        field_animals_permission:
-          id: field_animals_permission
-          table: node__field_animals_permission
-          field: field_animals_permission
-          relationship: none
-          group_type: group
-          admin_label: ''
-          label: ''
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: boolean
-          settings:
-            format: default
-            format_custom_true: ''
-            format_custom_false: ''
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-          plugin_id: field
         view_node:
           id: view_node
           table: node
@@ -2067,7 +1935,6 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.node.body'
-        - 'config:field.storage.node.field_animals_permission'
         - 'config:field.storage.node.field_distance_area'
         - 'config:field.storage.node.field_local_google_map'
         - 'config:field.storage.node.field_name_city'
