--- a/config/sync/views.view.list_waterfall.yml
+++ b/config/sync/views.view.list_waterfall.yml
@@ -63,23 +63,10 @@ display:
           sort_asc_label: Asc
           sort_desc_label: Desc
       pager:
-        type: mini
+        type: some
         options:
-          items_per_page: 3
+          items_per_page: 5
           offset: 0
-          id: 0
-          total_pages: null
-          tags:
-            previous: ‹‹
-            next: ››
-          expose:
-            items_per_page: false
-            items_per_page_label: 'Items per page'
-            items_per_page_options: '5, 10, 25, 50'
-            items_per_page_options_all: false
-            items_per_page_options_all_label: '- All -'
-            offset: false
-            offset_label: Offset
       style:
         type: default
       row:
@@ -312,7 +299,6 @@ display:
         - 'languages:language_content'
         - 'languages:language_interface'
         - url
-        - url.query_args
         - 'user.node_grants:view'
         - user.permissions
       tags: {  }
@@ -323,7 +309,7 @@ display:
     position: 2
     display_options:
       display_extenders: {  }
-      title: 'Lista Cachoeira'
+      title: 'Lista das Cachoeiras'
       defaults:
         title: false
         style: false
@@ -617,6 +603,7 @@ display:
         empty: false
         fields: false
         title: false
+        pager: false
       arguments:
         tid:
           id: tid
@@ -832,13 +819,17 @@ display:
           entity_field: title
           plugin_id: field
       title: 'Lista de Cachoeiras deste País'
+      pager:
+        type: some
+        options:
+          items_per_page: 3
+          offset: 0
     cache_metadata:
       max-age: -1
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
         - url
-        - url.query_args
         - 'user.node_grants:view'
         - user.permissions
       tags: {  }
@@ -1396,7 +1387,6 @@ display:
         - 'languages:language_content'
         - 'languages:language_interface'
         - url
-        - url.query_args
         - user
         - 'user.node_grants:view'
         - user.permissions
@@ -1413,9 +1403,12 @@ display:
     position: 4
     display_options:
       display_extenders: {  }
-      path: list_waterfall_rest
+      path: waterfall/list_waterfall_rest
       style:
         type: serializer
+        options:
+          formats:
+            json: json
       defaults:
         style: false
         row: false
