--- a/config/sync/core.entity_form_display.node.waterfall.default.yml
+++ b/config/sync/core.entity_form_display.node.waterfall.default.yml
@@ -11,6 +11,7 @@ dependencies:
     - field.field.node.waterfall.field_name_nation
     - field.field.node.waterfall.field_private_propriety
     - field.field.node.waterfall.field_river_name
+    - field.field.node.waterfall.field_type_content_waterfall
     - field.field.node.waterfall.field_waterfall_video
     - node.type.waterfall
   module:
@@ -24,7 +25,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 121
+    weight: 9
     settings:
       rows: 9
       summary_rows: 3
@@ -34,33 +35,33 @@ content:
     region: content
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 4
     region: content
     settings: {  }
     third_party_settings: {  }
   field_detailed_image_waterfall:
     type: media_library_widget
-    weight: 129
+    weight: 16
     settings:
       media_types: {  }
     third_party_settings: {  }
     region: content
   field_image_main_waterfall:
     type: media_library_widget
-    weight: 125
+    weight: 12
     settings:
       media_types: {  }
     third_party_settings: {  }
     region: content
   field_local_feeding:
-    weight: 127
+    weight: 14
     settings:
       display_label: true
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
   field_name_city:
-    weight: 123
+    weight: 10
     settings:
       match_operator: CONTAINS
       match_limit: 10
@@ -70,7 +71,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_name_nation:
-    weight: 124
+    weight: 11
     settings:
       match_operator: CONTAINS
       match_limit: 10
@@ -80,23 +81,33 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_private_propriety:
-    weight: 128
+    weight: 15
     settings:
       display_label: true
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
   field_river_name:
-    weight: 126
+    weight: 13
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
     type: text_textfield
     region: content
+  field_type_content_waterfall:
+    weight: 0
+    settings:
+      match_operator: CONTAINS
+      match_limit: 10
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
+    region: content
   field_waterfall_video:
     type: media_library_widget
-    weight: 130
+    weight: 17
     settings:
       media_types: {  }
     third_party_settings: {  }
@@ -110,7 +121,7 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 30
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -118,26 +129,26 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 15
+    weight: 5
     region: content
     third_party_settings: {  }
   status:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 120
+    weight: 8
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 16
+    weight: 6
     region: content
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: -5
+    weight: 1
     region: content
     settings:
       size: 60
@@ -145,7 +156,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 3
     settings:
       match_operator: CONTAINS
       size: 60
