--- a/config/sync/core.entity_view_display.node.waterfall.default.yml
+++ b/config/sync/core.entity_view_display.node.waterfall.default.yml
@@ -11,6 +11,7 @@ dependencies:
     - field.field.node.waterfall.field_name_nation
     - field.field.node.waterfall.field_private_propriety
     - field.field.node.waterfall.field_river_name
+    - field.field.node.waterfall.field_type_content_waterfall
     - field.field.node.waterfall.field_waterfall_video
     - node.type.waterfall
   module:
@@ -281,6 +282,14 @@ content:
     third_party_settings: {  }
     type: text_default
     region: content
+  field_type_content_waterfall:
+    weight: 111
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: first
   field_waterfall_video:
     type: entity_reference_entity_view
     weight: 110
